--- a/record/2024/20241026.md
+++ b/record/2024/20241026.md
@@ -1,12 +1,16 @@
-# [TIL] 2024.10.26📒
+# [TIL] 2024.10.26👌
 
 ## subwate 프로젝트
 
 * 회의
 1. subwate 프로젝트 내용 및 방향 숙지
-2. 리엑트에서 사용할 라이브러리 확인 후 재 탐색 예정
-
+2. React에서 사용할 라이브러리 확인 후 재 탐색 예정
 
 * <h3>환경설정</h3>
-1. react 프로젝트 생성 및 github 공유
+1. React 프로젝트 생성 및 github 공유
 2. JIRA, ERD, 피그마 가입
+
+* 해야할 일
+1. React에서 사용할 라이브러리가 무엇이 있는지 확인
+2. React 공부하기
+3. 개발 할 내용 다시 숙지하기
