--- a/record/2024/20241026.md
+++ b/record/2024/20241026.md
@@ -2,7 +2,7 @@
 
 ## subwate 프로젝트
 
-* 회의
+* <h3>회의</h3>
 1. subwate 프로젝트 내용 및 방향 숙지
 2. React에서 사용할 라이브러리 확인 후 재 탐색 예정
 
@@ -10,7 +10,7 @@
 1. React 프로젝트 생성 및 github 공유
 2. JIRA, ERD, 피그마 가입
 
-* 해야할 일
+* <h3>해야할 일</h3>
 1. React에서 사용할 라이브러리가 무엇이 있는지 확인
 2. React 공부하기
 3. 개발 할 내용 다시 숙지하기
